--- a/btlCSDL/btlCSDL.csproj
+++ b/btlCSDL/btlCSDL.csproj
@@ -97,6 +97,12 @@
     <Compile Include="FormLoading.Designer.cs">
       <DependentUpon>FormLoading.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormThêmHD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormThêmHD.Designer.cs">
+      <DependentUpon>FormThêmHD.cs</DependentUpon>
+    </Compile>
     <Compile Include="HOADON.cs">
       <DependentUpon>TuanAnh.tt</DependentUpon>
     </Compile>
@@ -108,6 +114,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="qltcDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>qltcDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Register.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -216,6 +227,9 @@
     <EmbeddedResource Include="FormLoading.resx">
       <DependentUpon>FormLoading.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormThêmHD.resx">
+      <DependentUpon>FormThêmHD.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -256,6 +270,7 @@
     <EmbeddedResource Include="UI\QTV\NghiepVu\PhieuTiem.resx">
       <DependentUpon>PhieuTiem.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\QTV\NghiepVu\ReportHD.rdlc" />
     <EmbeddedResource Include="UI\QTV\ucBacSy.resx">
       <DependentUpon>ucBacSy.cs</DependentUpon>
     </EmbeddedResource>
@@ -287,6 +302,17 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>TuanAnh.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="qltcDataSet.xsc">
+      <DependentUpon>qltcDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="qltcDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>qltcDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="qltcDataSet.xss">
+      <DependentUpon>qltcDataSet.xsd</DependentUpon>
+    </None>
     <None Include="TuanAnh.edmx.diagram">
       <DependentUpon>TuanAnh.edmx</DependentUpon>
     </None>
