--- a/btlCSDL/App.config
+++ b/btlCSDL/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
@@ -49,6 +49,32 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
 	<connectionStrings>
-		<add name="HoaDonEntities" connectionString="metadata=res://*/TuanAnh.csdl|res://*/TuanAnh.ssdl|res://*/TuanAnh.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-LDF85Q4\DUCNGUYEN;Initial Catalog=quanlytiemchung;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+  <add name="HoaDonEntities" connectionString="metadata=res://*/TuanAnh.csdl|res://*/TuanAnh.ssdl|res://*/TuanAnh.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DESKTOP-LDF85Q4\DUCNGUYEN;Initial Catalog=quanlytiemchung;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+   providerName="System.Data.EntityClient" />
+  <add name="quanlytiemchungEntities" connectionString="metadata=res://*/PhieuKTSK.csdl|res://*/PhieuKTSK.ssdl|res://*/PhieuKTSK.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-LDF85Q4\DUCNGUYEN;initial catalog=quanlytiemchung;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+   providerName="System.Data.EntityClient" />
+  <add name="desktop-ldf85q4\ducnguyen.quanlytiemchung.dbo" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-LDF85Q4\DUCNGUYEN;integrated security=SSPI;initial catalog=quanlytiemchung" />
+  <add name="btlCSDL.Properties.Settings.qltcConnectionString"
+   connectionString="Data Source=TUANANH\NGUYENTUANANH;Initial Catalog=qltc;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+  <add name="btlCSDL.Properties.Settings.quanlytiemchungConnectionString"
+   connectionString="Data Source=DESKTOP-LDF85Q4\DUCNGUYEN;Initial Catalog=quanlytiemchung;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="CrystalDecisions.Shared" publicKeyToken="692fbea5521e1304" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.2000.0" newVersion="13.0.2000.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CrystalDecisions.ReportSource" publicKeyToken="692fbea5521e1304" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.4000.0" newVersion="13.0.4000.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CrystalDecisions.CrystalReports.Engine" publicKeyToken="692fbea5521e1304" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.4000.0" newVersion="13.0.4000.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
