--- a/btlCSDL/packages.config
+++ b/btlCSDL/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net461" />
+  <package id="log4net" version="1.2.10" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1449.0" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net461" />
 </packages>
